# parquetjs-sys

./: .gitattributes  Cargo.toml  README.md  aliases.js  package-lock.json  package.json  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
data/read/: produce.parquet
parquetjs_sys/: all.html  fn.column_data.html  fn.compression.html  fn.created_by.html  fn.d_level_max.html  fn.encoding.html  fn.field_count.html  fn.field_list.html  fn.is_nested.html  fn.key_value_metadata.html  fn.name.html  fn.num_rows.html  fn.original_type.html  fn.path.html  fn.primitive_type.html  fn.r_level_max.html  fn.repetition_type.html  fn.row_count.html  fn.row_groups.html  fn.type_length.html  fn.version.html  index.html  sidebar-items.js  static.shredder.html  struct.Cursor.html  struct.EnvelopeReader.html  struct.EnvelopeWriter.html  struct.Field.html  struct.Metadata.html  struct.MetadataRowGroups.html  struct.ParquetCursor.html  struct.ParquetEnvelopeReader.html  struct.ParquetEnvelopeWriter.html  struct.ParquetReader.html  struct.ParquetSchema.html  struct.ParquetTransformer.html  struct.ParquetWriter.html  struct.Reader.html  struct.Row.html  struct.RowBuffer.html  (+6 more)
parquetjs_sys/interface/: index.html  sidebar-items.js  type.Schema.html
src/: lib.rs
src/class/: cursor.rs  envelope_reader.rs  envelope_writer.rs  mod.rs  reader.rs  schema.rs  transformer.rs  writer.rs
src/interface/: field.rs  metadata.rs  metadata_row_groups.rs  mod.rs  row.rs  row_buffer.rs  schema.rs  writer_options.rs
src/module/: mod.rs  shredder.rs
tests/: callable.rs  node.rs
(+87 files in other folders)
