[package]
edition = "2018"
name = "parquetjs-sys"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/interfaces-rs/parquetjs-sys"
description = """
Raw bindings to the parquetjs API for projects using wasm-bindgen.
"""

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[dependencies.js-sys]
version = "^0.3.32"
features = []

[dependencies.wasm-bindgen]
version = "^0.2.55"
features = ["strict-macro"]

[dependencies.web-sys]
version = "^0.3.32"
features = []

[dev-dependencies]
wasm-bindgen-test = { version = "=0.3.5" }
